@@ -138,7 +138,7 @@
 				<td></td>
 				<table border=0>
 					<tr>
-						<td rowspan=2 valign=top><font color="8bc53f">Show profile links to:</font></td>
+						<td rowspan=3 valign=top><font color="8bc53f">Show profile links to:</font></td>
 							<td valign=center><input type="checkbox" id="profile_steamgifts"><td><img src="img/ico/steamgifts.ico" width="16" height="16" border="0" /><td><font color="8bc53f">SteamGifts
 							<td valign=center><input type="checkbox" id="profile_steamtrades"><td><img src="img/ico/steamtrades.ico" width="16" height="16" border="0" /><td><font color="8bc53f">SteamTrades
 							<td valign=center><input type="checkbox" id="profile_steamrep"><td><img src="img/ico/steamrep.ico" width="16" height="16" border="0" /><td><font color="8bc53f">SteamRep
@@ -148,6 +148,11 @@
 							<td valign=center><input type="checkbox" id="profile_sapi"><td><img src="img/ico/sapi.ico" width="16" height="16" border="0" /><td><font color="8bc53f">sAPI
 							<td valign=center><input type="checkbox" id="profile_backpacktf"><td><img src="img/ico/backpacktf.ico" width="16" height="16" border="0" /><td><font color="8bc53f">backpack.tf
 						</tr>
+						<tr>
+							<td valign=center><input type="checkbox" id="profile_astats"><td><img src="img/ico/achievementstats.ico" width="16" height="16" border="0" /><td><font color="8bc53f">Achievement Stats
+							<td valign=center>
+							<td valign=center>
+						</tr>	
 					</table>		
 				</td>
 			</tr>
